Added neo4j and began using it in Main.java. Also renamed Node.java to Artifact.java to prevent Neo4J problems.

--- a/src/main/resources/graph.properties
+++ b/src/main/resources/graph.properties
@@ -1,1 +1,2 @@
-nodes.directory=graph-module/src/main/resources/Nodes
+artifacts.directory=graph-module/src/main/resources/Nodes
+db.path=/home/ptijohn/Documents/Neo4jDB
