--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,11 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
 </project>
