Separated code in methods and classes. Prepared merging of two graphs. Getting custom display to a better result, but not perfect still.

--- a/src/main/resources/graph.properties
+++ b/src/main/resources/graph.properties
@@ -1,2 +1,3 @@
 artifacts.directory=src/main/resources/Nodes
+artifacts.merge.directory=src/main/resources/NodesToMerge
 db.path=/home/ptijohn/Documents/Neo4jDB
